Update README.md with new theme preview image and improve table formatting; add GitHub Actions workflow for build and publish process; update package.json with deploy script and test command.

--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
   },
   "scripts": {
     "package": "vsce package",
-    "publish": "vsce publish"
+    "publish": "vsce publish",
+    "deploy": "vsce publish",
+    "test": "echo \"No tests specified\" && exit 0"
   }
 }
