--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,6 +34,7 @@ jobs:
         path: '*.vsix'
         
     - name: Create GitHub Release
+      id: create_release
       if: startsWith(github.ref, 'refs/tags/')
       uses: actions/create-release@v1
       env:
