chore(deps): add grouped updates for npm dependencies

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -33,3 +33,7 @@ updates:
       - "dependencies"
       - "npm"
     open-pull-requests-limit: 10
+    groups:
+      npm-dependencies:
+        patterns:
+          - "*"
