--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -46,12 +46,25 @@ jobs:
         tenant-id: ${{ env.AZURE_TENANT_ID }}
         subscription-id: ${{ env.AZURE_SUBSCRIPTION_ID }}
 
+    - name: Allow runner access to Key Vault
+      id: firewall
+      run: |
+        RUNNER_IP=$(curl -s https://api.ipify.org)
+        echo "runner_ip=$RUNNER_IP" >> $GITHUB_OUTPUT
+        az keyvault network-rule add --name "${{ env.KEY_VAULT_NAME }}" --ip-address "$RUNNER_IP/32" --only-show-errors
+        sleep 10
+
     - name: Get VSCE PAT from Key Vault
       id: keyvault
       run: |
         VSCE_PAT=$(az keyvault secret show --vault-name "${{ env.KEY_VAULT_NAME }}" --name "vsce-marketplace-pat" --query "value" -o tsv)
         echo "::add-mask::$VSCE_PAT"
         echo "VSCE_PAT=$VSCE_PAT" >> $GITHUB_OUTPUT
+
+    - name: Remove runner access from Key Vault
+      if: always()
+      run: |
+        az keyvault network-rule remove --name "${{ env.KEY_VAULT_NAME }}" --ip-address "${{ steps.firewall.outputs.runner_ip }}/32" --only-show-errors
 
     - name: Install vsce
       run: npm install -g @vscode/vsce
