fix: clean up VSIX packaging and bump to v1.3.1
Exclude dev files from VSIX (.claude, .husky, scripts, favicon.ico,
CODEOWNERS, release-please configs). Reduces package size significantly.

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,19 @@
 .vscode/**
 .git/**
 .github/**
+.claude/**
+.husky/**
+scripts/**
 **/*.vsix
 **/*.log
 **/*.sh
 coverage/**
 node_modules/**
 .env.local
+.gitignore
+.prettierignore
+.release-please-manifest.json
+release-please-config.json
+CLAUDE.md
+CODEOWNERS
+favicon.ico
