--- a/package.json
+++ b/package.json
@@ -1,76 +1,20 @@
 {
-  "name": "lucid-labs-theme",
-  "displayName": "Lucid Labs Theme",
-  "description": "A professional dark theme for Visual Studio Code based on Lucid Labs brand guidelines. Features dark purple backgrounds, teal accents, and cloud-inspired aesthetics perfect for Azure development, PowerShell scripting, and enterprise coding.",
-  "version": "1.3.2",
-  "publisher": "lucidlabs",
+  "name": "lucid-labs-vscode-themes",
+  "private": true,
+  "description": "Theme factory for generating branded VS Code themes from shared templates.",
   "license": "MIT",
-  "icon": "icon.png",
   "author": {
     "name": "Lucid Labs",
     "url": "https://lucidlabs.com.au"
-  },
-  "keywords": [
-    "theme",
-    "dark theme",
-    "colour theme",
-    "lucid labs",
-    "purple",
-    "teal",
-    "professional",
-    "cloud",
-    "azure",
-    "powershell",
-    "enterprise",
-    "brand",
-    "microsoft",
-    "dark mode"
-  ],
-  "categories": [
-    "Themes"
-  ],
-  "galleryBanner": {
-    "color": "#271D3B",
-    "theme": "dark"
-  },
-  "qna": "marketplace",
-  "extensionKind": [
-    "ui"
-  ],
-  "contributes": {
-    "themes": [
-      {
-        "label": "Lucid Labs Dark",
-        "uiTheme": "vs-dark",
-        "path": "./themes/lucid-labs-color-theme.json"
-      },
-      {
-        "label": "Lucid Labs Light",
-        "uiTheme": "vs",
-        "path": "./themes/lucid-labs-light-theme.json"
-      }
-    ]
-  },
-  "engines": {
-    "vscode": "^1.107.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/LucidLabsAU/lucid-labs-vscode-theme.git"
   },
-  "bugs": {
-    "url": "https://github.com/LucidLabsAU/lucid-labs-vscode-theme/issues"
-  },
-  "homepage": "https://lucidlabs.com.au",
-  "sponsor": {
-    "url": "https://lucidlabs.com.au"
-  },
   "scripts": {
+    "generate": "node scripts/generate.js",
     "lint": "node scripts/lint-themes.js",
-    "package": "vsce package",
-    "publish": "vsce publish",
-    "deploy": "vsce publish",
-    "test": "echo \"No tests specified\" && exit 0",
+    "package:all": "for dir in extensions/*/; do (cd \"$dir\" && vsce package); done",
     "prepare": "husky || true"
   },
   "devDependencies": {
