--- a/extensions/charli/package.json
+++ b/extensions/charli/package.json
@@ -1,8 +1,8 @@
 {
   "name": "charli-health-theme",
   "displayName": "CHARLI Health",
-  "description": "A warm, accessible VS Code theme based on the CHARLI Health brand guidelines. Features Taffy pink, Blueberry blue, and Jungle green with both dark and light variants optimised for healthcare development.",
-  "version": "1.0.0",
+  "description": "A warm, accessible VS Code colour theme based on the CHARLI Health brand guidelines. Features Taffy pink, Blueberry blue, Jungle green, Apricot, and Salmon with both dark and light variants optimised for healthcare development.",
+  "version": "1.0.1",
   "publisher": "lucidlabs",
   "license": "MIT",
   "icon": "icon.png",
