feat: add branded icon theme, bracket pair colours, and enhanced semantic tokens
- Add 23 SVG file/folder icon templates with brand colour placeholders
- Generate branded icon themes per extension (icons use dark palette)
- Add editorBracketHighlight.foreground1-6 with brand-specific colours
- Add editorBracketPairGuide colours with active/inactive states
- Enhance semanticTokenColors: type/interface (italic), enum, namespace,
  decorator, variable.readonly, property.readonly, parameter
- Extend generator to process SVG templates and icon-theme.json
- Register icon themes in extension package.jsons

--- a/extensions/charli/package.json
+++ b/extensions/charli/package.json
@@ -2,7 +2,7 @@
   "name": "charli-health-theme",
   "displayName": "CHARLI Health",
   "description": "A warm, accessible VS Code colour theme based on the CHARLI Health brand guidelines. Features Taffy pink, Blueberry blue, Jungle green, Apricot, and Salmon with both dark and light variants optimised for healthcare development.",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "publisher": "lucidlabs",
   "license": "MIT",
   "icon": "icon.png",
@@ -22,10 +22,13 @@
     "accessible",
     "pink",
     "pastel",
-    "brand"
+    "brand",
+    "icon theme",
+    "icons"
   ],
   "categories": [
-    "Themes"
+    "Themes",
+    "Icon Themes"
   ],
   "galleryBanner": {
     "color": "#1E1A24",
@@ -46,6 +49,13 @@
         "label": "CHARLI Light",
         "uiTheme": "vs",
         "path": "./themes/charli-light.json"
+      }
+    ],
+    "iconThemes": [
+      {
+        "id": "charli-health-icons",
+        "label": "CHARLI Health Icons",
+        "path": "./icon-theme.json"
       }
     ]
   },
