--- a/templates/base-dark.jsonc
+++ b/templates/base-dark.jsonc
@@ -20,6 +20,27 @@
     "editorWhitespace.foreground": "{{indentGuide|keyword}}50",
     "editorRuler.foreground": "{{indentGuide|keyword}}30",
 
+    // Bracket pair colourisation
+    "editorBracketHighlight.foreground1": "{{bracket1}}",
+    "editorBracketHighlight.foreground2": "{{bracket2}}",
+    "editorBracketHighlight.foreground3": "{{bracket3}}",
+    "editorBracketHighlight.foreground4": "{{bracket4}}",
+    "editorBracketHighlight.foreground5": "{{bracket5}}",
+    "editorBracketHighlight.foreground6": "{{bracket6}}",
+    "editorBracketHighlight.unexpectedBracket.foreground": "{{error}}",
+    "editorBracketPairGuide.activeBackground1": "{{bracket1}}80",
+    "editorBracketPairGuide.activeBackground2": "{{bracket2}}80",
+    "editorBracketPairGuide.activeBackground3": "{{bracket3}}80",
+    "editorBracketPairGuide.activeBackground4": "{{bracket4}}80",
+    "editorBracketPairGuide.activeBackground5": "{{bracket5}}80",
+    "editorBracketPairGuide.activeBackground6": "{{bracket6}}80",
+    "editorBracketPairGuide.background1": "{{bracket1}}40",
+    "editorBracketPairGuide.background2": "{{bracket2}}40",
+    "editorBracketPairGuide.background3": "{{bracket3}}40",
+    "editorBracketPairGuide.background4": "{{bracket4}}40",
+    "editorBracketPairGuide.background5": "{{bracket5}}40",
+    "editorBracketPairGuide.background6": "{{bracket6}}40",
+
     "activityBar.background": "{{backgroundDeep}}",
     "activityBar.foreground": "{{foreground}}",
     "activityBar.inactiveForeground": "{{muted}}80",
@@ -761,9 +782,17 @@
   ],
   "semanticHighlighting": true,
   "semanticTokenColors": {
-    "enumMember": "{{string}}",
+    "enumMember": "{{constant}}",
     "variable.constant": "{{constant}}",
     "variable.defaultLibrary": "{{keyword}}",
+    "variable.readonly": "{{foreground}}",
+    "property.readonly": "{{constant}}",
+    "parameter": "{{foreground}}",
+    "type": { "foreground": "{{keyword}}", "italic": true },
+    "interface": { "foreground": "{{keyword}}", "italic": true },
+    "enum": "{{keyword}}",
+    "namespace": "{{accent}}",
+    "decorator": "{{keyword}}",
     "variable:dart": "{{foreground}}",
     "property:dart": "{{function}}",
     "annotation:dart": "{{keyword}}",
