fix: remove invalid 'Icon Themes' category
VS Code marketplace only accepts 'Themes' as the category. The icon theme
contribution is registered via contributes.iconThemes, not categories.

--- a/extensions/charli/package.json
+++ b/extensions/charli/package.json
@@ -27,8 +27,7 @@
     "icons"
   ],
   "categories": [
-    "Themes",
-    "Icon Themes"
+    "Themes"
   ],
   "galleryBanner": {
     "color": "#1E1A24",
