--- a/extensions/lucid-labs/package.json
+++ b/extensions/lucid-labs/package.json
@@ -29,8 +29,7 @@
     "icons"
   ],
   "categories": [
-    "Themes",
-    "Icon Themes"
+    "Themes"
   ],
   "galleryBanner": {
     "color": "#271D3B",
