chore: add Other category for broader marketplace discoverability

--- a/extensions/lucid-labs/package.json
+++ b/extensions/lucid-labs/package.json
@@ -29,7 +29,8 @@
     "icons"
   ],
   "categories": [
-    "Themes"
+    "Themes",
+    "Other"
   ],
   "galleryBanner": {
     "color": "#271D3B",
