--- a/extensions/charli/package.json
+++ b/extensions/charli/package.json
@@ -27,7 +27,8 @@
     "icons"
   ],
   "categories": [
-    "Themes"
+    "Themes",
+    "Other"
   ],
   "galleryBanner": {
     "color": "#1E1A24",
