feat: add Banjo Loans and Perfection Fresh themes with branded icons
- Add Banjo Loans brand (v1.0.0): electric blue accents, deep purple
  backgrounds, sage green strings, B mark source control icon
- Add Perfection Fresh brand (v1.0.0): red seal accents, produce greens,
  red status bar on dark/light, mango source control icon
- Add branded source control icons for all brands: Lucid cloud arrows,
  CHARLI C letterform, Banjo B mark, Perfection mango
- Add brand-specific icon override support in generator
  (brands/<name>/icons/ overrides shared templates)
- Add WCAG contrast ratio checker script (scripts/check-contrast.js)
- Update templates with titleBar, commandCenter, and statusBar fallback
  chains for per-brand customisation
- Update all customer brand descriptions with Lucid Labs attribution
  and trademark disclaimer
- Configure release-please for both new extensions

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -9,6 +9,16 @@
       "release-type": "node",
       "changelog-path": "CHANGELOG.md",
       "component": "charli-health-theme"
+    },
+    "extensions/banjo-loans": {
+      "release-type": "node",
+      "changelog-path": "CHANGELOG.md",
+      "component": "banjo-loans-theme"
+    },
+    "extensions/perfection-fresh": {
+      "release-type": "node",
+      "changelog-path": "CHANGELOG.md",
+      "component": "perfection-fresh-theme"
     }
   }
 }
