--- a/templates/base-dark.jsonc
+++ b/templates/base-dark.jsonc
@@ -66,16 +66,22 @@
     "list.focusBackground": "{{accent}}40",
     "list.highlightForeground": "{{accent}}",
 
-    "titleBar.activeBackground": "{{backgroundDeep}}",
-    "titleBar.activeForeground": "{{foreground}}",
-    "titleBar.inactiveBackground": "{{backgroundDeep}}",
-    "titleBar.inactiveForeground": "{{muted}}80",
-    "titleBar.border": "{{backgroundDeep}}",
+    "titleBar.activeBackground": "{{titleBarBg|backgroundDeep}}",
+    "titleBar.activeForeground": "{{titleBarFg|foreground}}",
+    "titleBar.inactiveBackground": "{{titleBarBg|backgroundDeep}}",
+    "titleBar.inactiveForeground": "{{titleBarFg|muted}}80",
+    "titleBar.border": "{{titleBarBorder|titleBarBg|backgroundDeep}}",
+    "commandCenter.foreground": "{{titleBarFg|foreground}}",
+    "commandCenter.activeForeground": "{{titleBarFg|foreground}}",
+    "commandCenter.background": "{{titleBarFg|foreground}}15",
+    "commandCenter.activeBackground": "{{titleBarFg|foreground}}25",
+    "commandCenter.border": "{{titleBarFg|foreground}}30",
+    "commandCenter.activeBorder": "{{titleBarFg|foreground}}50",
 
-    "statusBar.background": "{{backgroundDeep}}",
-    "statusBar.foreground": "{{foreground}}",
-    "statusBar.border": "{{backgroundDeep}}",
-    "statusBar.noFolderBackground": "{{backgroundDeep}}",
+    "statusBar.background": "{{statusBar|backgroundDeep}}",
+    "statusBar.foreground": "{{statusBarFg|foreground}}",
+    "statusBar.border": "{{statusBarBorder|statusBar|backgroundDeep}}",
+    "statusBar.noFolderBackground": "{{statusBarBorder|statusBar|backgroundDeep}}",
     "statusBar.debuggingBackground": "{{debuggingBg|success}}",
     "statusBar.debuggingForeground": "{{debuggingFg|foreground}}",
     "statusBarItem.hoverBackground": "{{accent}}30",
