--- a/templates/base-light.jsonc
+++ b/templates/base-light.jsonc
@@ -66,11 +66,17 @@
     "list.focusBackground": "{{accent}}30",
     "list.highlightForeground": "{{accent}}",
 
-    "titleBar.activeBackground": "{{backgroundDeep}}",
-    "titleBar.activeForeground": "{{foreground}}",
-    "titleBar.inactiveBackground": "{{backgroundDeep}}",
-    "titleBar.inactiveForeground": "{{inactiveForeground|foreground}}70",
-    "titleBar.border": "{{keyword}}30",
+    "titleBar.activeBackground": "{{titleBarBg|backgroundDeep}}",
+    "titleBar.activeForeground": "{{titleBarFg|foreground}}",
+    "titleBar.inactiveBackground": "{{titleBarBg|backgroundDeep}}",
+    "titleBar.inactiveForeground": "{{titleBarFg|inactiveForeground|foreground}}70",
+    "titleBar.border": "{{titleBarBorder|titleBarBg|keyword}}30",
+    "commandCenter.foreground": "{{titleBarFg|foreground}}",
+    "commandCenter.activeForeground": "{{titleBarFg|foreground}}",
+    "commandCenter.background": "{{titleBarFg|foreground}}15",
+    "commandCenter.activeBackground": "{{titleBarFg|foreground}}25",
+    "commandCenter.border": "{{titleBarFg|foreground}}30",
+    "commandCenter.activeBorder": "{{titleBarFg|foreground}}50",
 
     "statusBar.background": "{{statusBar|keyword}}",
     "statusBar.foreground": "#FFFFFF",
