--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,4 +1,6 @@
 {
   "extensions/lucid-labs": "1.5.0",
-  "extensions/charli": "1.1.0"
+  "extensions/charli": "1.1.0",
+  "extensions/banjo-loans": "1.0.0",
+  "extensions/perfection-fresh": "1.0.0"
 }
