feat: add Australian Food & Fibre theme with cotton plant icon
Navy blue and gold colour palette derived from AFF brand identity.
Includes dark and light themes, cotton plant branded git icon,
and full icon theme with 23 file type icons.

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -19,6 +19,11 @@
       "release-type": "node",
       "changelog-path": "CHANGELOG.md",
       "component": "perfection-fresh-theme"
+    },
+    "extensions/australian-food-fibre": {
+      "release-type": "node",
+      "changelog-path": "CHANGELOG.md",
+      "component": "australian-food-fibre-theme"
     }
   }
 }
