--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -45,6 +45,13 @@ jobs:
           exit 0
         fi
 
+        # Manual dispatch with no input: publish all extensions
+        if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+          EXTENSIONS=$(ls -d extensions/*/ | xargs -I{} basename {} | jq -R -s -c 'split("\n") | map(select(. != ""))')
+          echo "extensions=$EXTENSIONS" >> $GITHUB_OUTPUT
+          exit 0
+        fi
+
         CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD)
 
         # If templates or brands changed, publish all extensions
